# erosion-thickness

./: .gitignore  Cargo.toml  README.md
resources/: skeleton.ply
src/: lib.rs
src/et_algorithm/: algorithm.rs  burntime.rs  graph.rs  mod.rs  sector.rs  vertex.rs
src/skeleton/: erosion_path.rs  io.rs  mod.rs  skeleton.rs
tests/: unit_test.rs
