[package]
name = "erosion_thickness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.3"
ndarray="0.15.6"
log="0.4.20"
env_logger="0.10.0"
ply-rs = "0.1.3"


[[bin]]
name = "soft_et"
path = "src/bin/soft_et.rs"
